welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:13: error: reassignment to val
	}else if (litMessage="A"){
                            ^